tests/construct/unsupported_enum.stderr
error: Only Structs are supported
 --> tests/construct/unsupported_enum.rs:4:1
  |
4 | / enum MyEnum {
5 | |     Variant1,
6 | |     Variant2,
7 | | }
  | |_^
